Resolve some stale issues